--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+<ul>
+    <li><a href="recipes/BuffaloWings.html">Buffalo Wings</a></li>
+    <li><a href="recipes/ChickenAsado.html">Chicken Asado</a></li>
+    <li><a href="recipes/ChickenParmesan.html">Chicken Parmesan</a></li>
+</ul>
 </body>
 </html>
