--- a/recipes/BuffaloWings.html
+++ b/recipes/BuffaloWings.html
@@ -1,2 +1,4 @@
 <h1>Buffalo Wings</h1>
 <img src="../images/Buffalo Wings.jpg" alt="Crispy Buffalo Wings" height="400" width="300">
+<p>Delicious and crispy Buffalo Wings that are great for any occasion!</p>
+<p>These resturant style appetizers are a sure fire way to bring some spice to game day or celebration!</p>
