--- a/recipes/ChickenParmesan.html
+++ b/recipes/ChickenParmesan.html
@@ -1,2 +1,4 @@
 <h1>Chicken Parmesan</h1>
 <img src="../images/Chicken Parmesan.jpg" alt="Wonderful Chicken Parmesan" height="500" width="800">
+<p>An easy-to-make Chicken recipe that can be combined with a pasta base for more flavor!</p>
+<p>Great for after a long day of work, or to spice up your meal-prepping!</p>
