Add ul of ingredients

--- a/recipes/BuffaloWings.html
+++ b/recipes/BuffaloWings.html
@@ -2,3 +2,14 @@
 <img src="../images/Buffalo Wings.jpg" alt="Crispy Buffalo Wings" height="400" width="320">
 <p>Delicious and crispy Buffalo Wings that are great for any occasion!</p>
 <p>These resturant style appetizers are a surefire way to bring some spice to a Game Day or celebration!</p>
+
+<h3>What you will need to bring the best wings to your Game Day!</h3>
+<ul>
+    <li>Chicken Wings! (Duh), you can use either fresh or thawed frozen wings or drumettes.</li>
+    <li>Baking Powder. This is how we will make the Buffalo Wings extra crispy</li>
+    <li>Salt, because why not?</li>
+    <li>Garlic Powder. Garlic will add a little zest to the wings before being tossed in the buffalo sauce.</li>
+    <li>Butter (salted or unsalted, your preference). This will help add a creaminess to the buffalo sauce.</li>
+    <li>The sauce can be entirely up to you, go as hot as you would like, or no heat if you prefer. I recommend Frank's Red Hot Sauce.</li>
+    <li>Sugar. The sugar will help the buffalo sauce caramelize and thicken and make your wings dripping with sauce!</li>
+</ul>
