Add ol of steps

--- a/recipes/BuffaloWings.html
+++ b/recipes/BuffaloWings.html
@@ -13,3 +13,13 @@
     <li>The sauce can be entirely up to you, go as hot as you would like, or no heat if you prefer. I recommend Frank's Red Hot Sauce.</li>
     <li>Sugar. The sugar will help the buffalo sauce caramelize and thicken and make your wings dripping with sauce!</li>
 </ul>
+<h3>Now that we have the ingredients, let's put it all together!</h3>
+<ol>
+    <li>Prep your Chicken Wings - cut the wings in half to seperate any wings from drumettes. Pat the wings dry with a paper towel, then preheat your oven and line a rimmed baking sheet with foil.</li>
+    <li>Make your dry seasoning - Combine baking powder, salt, and garlic powder.</li>
+    <li>Season the wings - Place your wings in a mixing bowl and toss them in the dry seasoning, then assemble them in a single layer on the baking sheet.</li>
+    <li>Bake - Bake them for 50 minutes, and flip them at the 25 minute mark.</li>
+    <li>Make the Sauce - In another bowl, stir together melted butter, sugar, and your choice of hot sauce.</li>
+    <li>Toss - Once wings are thouroughly cooked, toss them in the sauce!</li>
+    <li>Enjoy! You just made the crispiest and tastiest wings!</li>
+</ol>
