--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
 <ul>
-    <li><a href="recipes/BuffaloWings.html">Buffalo Wings</a></li>
-    <li><a href="recipes/ChickenAsado.html">Chicken Asado</a></li>
-    <li><a href="recipes/ChickenParmesan.html">Chicken Parmesan</a></li>
+    <li><a href="recipes/BuffaloWings.html" target="_blank">Buffalo Wings</a></li>
+    <li><a href="recipes/ChickenAsado.html" target="_blank">Chicken Asado</a></li>
+    <li><a href="recipes/ChickenParmesan.html" target="_blank">Chicken Parmesan</a></li>
 </ul>
 </body>
 </html>
