--- a/recipes/ChickenAsado.html
+++ b/recipes/ChickenAsado.html
@@ -1,4 +1,4 @@
 <h1>Chicken Asado</h1>
 <img src="../images/Chicken Asado.jpg" alt="Delicious Chicken Asado" height="400" width="400">
-<p>A delicious recipe to combine with sides such as refried beans, and rice!</p>
+<p>Pollo Asado, or Chicken Asado is a delicious Mexican or Cuban-style recipe that can be combined with many different sides.</p>
 <p>Perfect for easy meal-prepping or a quick dinner!</p>
