--- a/recipes/ChickenAsado.html
+++ b/recipes/ChickenAsado.html
@@ -2,3 +2,15 @@
 <img src="../images/Chicken Asado.jpg" alt="Delicious Chicken Asado" height="400" width="400">
 <p>Pollo Asado, or Chicken Asado is a delicious Mexican or Cuban-style recipe that can be combined with many different sides.</p>
 <p>Perfect for easy meal-prepping or a quick dinner!</p>
+
+<h3>What you will need</h3>
+<ul>
+    <li>The Chicken - It is best to use boneless and skinless thighs, as this will result in a juicier taste.</li>
+    <li>Olive Oil - This will help distrubute flavor all around the chicken.</li>
+    <li>Orange Juice - Orange juice will add a citrusy flavor, and tenderize the chicken.</li>
+    <li>Lime Juice - This will provide a zesty flavor to the chicken, and will help balance out the orange juice.</li>
+    <li>Garlic - An essential ingredient that helps bring depth to the chicken.</li>
+    <li>Achiote or Paprika powder - Both will bring a nice smokiness to the entire dish.</li>
+    <li>Oregano - a common herb used in Latin American cuisine, it gives the chicken an earthy flavor.</li>
+    <li>Cumin - A crucial spice that brings a warming flavor.</li>
+</ul>
