--- a/recipes/ChickenAsado.html
+++ b/recipes/ChickenAsado.html
@@ -14,3 +14,13 @@
     <li>Oregano - a common herb used in Latin American cuisine, it gives the chicken an earthy flavor.</li>
     <li>Cumin - A crucial spice that brings a warming flavor.</li>
 </ul>
+
+<h3>How to make!</h3>
+<ol>
+    <li>Add your chicken and all ingredients into a large bowl. Toss everything until the chicken is fully coated in the juices, and seasonings.</li>
+    <li>Add your olive oil to a large nonstick skillet over medium heat.</li>
+    <li>Once the oil is hot, add your coated chicken to the pan.</li>
+    <li>Cook the chicken for five minutes, and then carefully flip, and cook for another five minutes.</li>
+    <li>Reduce the heat to medium-low and continue cooking your chicken. Flip the chicken occasionally until fully cooked.</li>
+    <li>Serve!</li>
+</ol>
