--- a/recipes/ChickenParmesan.html
+++ b/recipes/ChickenParmesan.html
@@ -2,3 +2,19 @@
 <img src="../images/Chicken Parmesan.jpg" alt="Wonderful Chicken Parmesan" height="500" width="800">
 <p>An easy-to-make Chicken recipe that can be combined with a pasta base for more flavor!</p>
 <p>Great for after a long day of work, or to spice up your meal-prepping!</p>
+
+<h3>What you will need</h3>
+<ul>
+    <li>Four skinless, boneless chicken breasts</li>
+    <li>Salt and pepper for taste</li>
+    <li>Two large eggs</li>
+    <li>One cup panko bread crumbs</li>
+    <li>3/4 cup grated Parmesan cheese</li>
+    <li>Two tablespoons all-purpose flour</li>
+    <li>1/2 cup olive oil for frying</li>
+    <li>1/2 cup prepared tomato sauce</li>
+    <li>1/4 cup fresh mozzarella, cut into small cubes</li>
+    <li>1/4 cup chopped fresh basil</li>
+    <li>1/2 cup grated provolone cheese</li>
+    <li>Two teaspoons olive oil</li>
+</ul>
