--- a/recipes/ChickenParmesan.html
+++ b/recipes/ChickenParmesan.html
@@ -18,3 +18,17 @@
     <li>1/2 cup grated provolone cheese</li>
     <li>Two teaspoons olive oil</li>
 </ul>
+
+<h3>How to put it all together</h3>
+<ol>
+    <li>Preheat your oven to 450 degrees F or 230 degrees C.</li>
+    <li>Season chicken thoroughly with the salt and pepper. Evenly coat both sides of chicken breast with flour.</li>
+    <li>Beat eggs in a bowl and set aside for later.</li>
+    <li>Mix bread crumbs and 1/2 cup of Parmesan cheese in a bowl, set aside for later.</li>
+    <li>Dip chicken breasts in beaten egg, then transfer to bread crumb mixture and get both sides.</li>
+    <li>Heat 1/2 cup of olive oil in a large skillet on medium-high heat. Cook chicken in hot oil until golden. It will finish cooking in the oven.</li>
+    <li>Transfer golden chicken to a baking sheet. Top each breast with two tablespoons of tomato sauce. Layer each chicken with equal amounts of mozzarella cheese, fresh basil, and provolone cheese.</li>
+    <li>Any remaining Parmesan can be sprinkled over top, and drizzle each breast with 1/2 teaspoon of olive oil.</li>
+    <li>Bake in the oven until the cheese is browned and bubbly, and the chicken breasts are no long pink in the center. About 15-20 minutes.</li>
+    <li>Serve!</li>
+</ol>
